# claude-profiler

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
src/: app.rs  codex_instructions.rs  config.rs  error.rs  launcher.rs  lmstudio.rs  main.rs  openai_oauth.rs  proxy.rs  tui.rs
src/backends/: lmstudio.rs  mod.rs
src/ui/: help.rs  mod.rs  profile_list.rs
