[package]
name = "ClaudeProfiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
bytes = "1.9"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
tui-input = "0.11"
axum = "0.8"
async-stream = "0.3"
futures = "0.3"
